--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.0",
     "angularx-qrcode": "^17.0.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
